Revise introduction, theory, and methods

--- a/Interim/interim.bib
+++ b/Interim/interim.bib
@@ -143,3 +143,74 @@
 	keywords = {Deep learning, Training, Instruments, CNN, Error analysis, Machine learning, MIDI, Music, Neural nets, Piano reduction, Supervised learning, Training data},
 	pages = {66--71},
 }
+
+
+@inproceedings{pearce_towards_2001,
+	title = {Towards {A} {Framework} for the {Evaluation} of {Machine} {Compositions}},
+	url = {https://www.semanticscholar.org/paper/Towards-A-Framework-for-the-Evaluation-of-Machine-Pearce-Wiggins/c1cb675ecddaf28f2c241921bb16399a1a9e19c9?sort=is-influential},
+	abstract = {We outline a framework within which machine compositions may be evaluated objectively. In particular, the framework allows statements about those compositions to be refuted on the basis of empirical experimentation. We consider this to be fundamental if we wish to evaluate the degree to which our programs achieve their compositional aims. Furthermore, a review of the literature reveals that this is a largely ignored aspect of research into algorithmic composition. Our framework involves four components: specifying the compositional aims; inducing a critic from a set of example musical phrases; composing music that satisfies the critic; and evaluating specific claims about the compositions in experiments using human subjects. We describe a system which exemplifies these four stages and which demonstrates the practicality of the framework. Finally, the application of the framework to the evaluation of musical creativity is discussed and directions for future research are suggested.},
+	urldate = {2024-11-25},
+	author = {Pearce, M. and Wiggins, Geraint A.},
+	year = {2001},
+}
+
+
+@misc{freedline_algorhythms_2021,
+	title = {Algorhythms: {Generating} {Music} with {D}-{Wave}'s {Quantum} {Annealer}},
+	shorttitle = {Algorhythms},
+	url = {https://medium.com/mit-6-s089-intro-to-quantum-computing/algorhythms-generating-music-with-d-waves-quantum-annealer-95697ec23ccd},
+	abstract = {In this Blog we will be discussing our project for the iQuHack 2021 Hackathon.},
+	language = {en},
+	urldate = {2024-11-09},
+	journal = {MIT 6.s089—Intro to Quantum Computing},
+	author = {Freedline, Alex},
+	month = feb,
+	year = {2021},
+}
+
+
+@misc{arya_music_2022,
+	title = {Music {Composition} {Using} {Quantum} {Annealing}},
+	url = {http://arxiv.org/abs/2201.10557},
+	doi = {10.48550/arXiv.2201.10557},
+	abstract = {With the emergence of quantum computers, a new field of algorithmic music composition has been initiated. The vast majority of previous work focuses on music generation using gate-based quantum computers. An alternative model of computation is adiabatic quantum computing (AQC), and a heuristic algorithm known as quantum annealing running in the framework of AQC is a promising method for solving optimization problems. In this chapter, we lay the groundwork of music composition using quantum annealing. We approach the process of music composition as an optimization problem. We describe the fundamental methodologies needed for generating different aspects of music including melody, rhythm, and harmony. The discussed techniques are illustrated through examples to ease the understanding. The music pieces generated using D-Wave quantum annealers are among the first examples of their kind and presented within the scope of the chapter. The text is an unedited pre-publication version of a chapter which will appear in the book "Quantum Computer Music", Miranda, E. R. (Editor).},
+	urldate = {2024-10-26},
+	publisher = {arXiv},
+	author = {Arya, Ashish and Botelho, Ludmila and Cañete, Fabiola and Kapadia, Dhruvi and Salehi, Özlem},
+	month = jan,
+	year = {2022},
+	note = {arXiv:2201.10557},
+	keywords = {Quantum Physics, Computer Science - Emerging Technologies},
+}
+
+
+@misc{miranda_hello_2020,
+	title = {Quantum {Computer}: {Hello}, {Music}!},
+	shorttitle = {Quantum {Computer}},
+	url = {http://arxiv.org/abs/2006.13849},
+	doi = {10.48550/arXiv.2006.13849},
+	abstract = {Quantum computing is emerging as a promising technology, which is built on the principles of subatomic physics. By the time of writing, fully fledged practical quantum computers are not widely available. But research and development are advancing rapidly. Various software simulators are already available. And a few companies have already started to provide access to quantum hardware via the cloud. These initiatives have enabled experiments with quantum computing to tackle some realistic problems in science; e.g., in chemistry and cryptography. In spite of continuing progress in developing increasingly more sophisticated hardware and software, research in quantum computing has been focusing primarily on developing scientific applications. Up till now there has been virtually no research activity aimed at widening the range of applications of this technology beyond science and engineering. In particular applications for the entertainment industry and creative economies. This article introduces a new field of research, which is referred to as Quantum Computer Music. This research is aimed at the development of quantum computing tools and approaches to creating, performing, listening to and distributing music. The article begins with a brief historical background. Then, it introduces the notion of algorithmic music and presents two quantum computer music systems: a singing voice synthesiser and a musical sequencer based on quantum walk. A primer on quantum computing is also given. The chapter ends with a concluding discussion and advice for further work to develop this new exciting area of research.},
+	urldate = {2024-10-24},
+	publisher = {arXiv},
+	author = {Miranda, Eduardo R.},
+	month = jun,
+	year = {2020},
+	note = {arXiv:2006.13849},
+	keywords = {Quantum Physics, Computer Science - Emerging Technologies, Computer Science - Sound, Electrical Engineering and Systems Science - Audio and Speech Processing},
+}
+
+
+@misc{miranda_impossible_2022,
+	title = {Teaching {Qubits} to {Sing}: {Mission} {Impossible}?},
+	shorttitle = {Teaching {Qubits} to {Sing}},
+	url = {http://arxiv.org/abs/2207.08225},
+	doi = {10.48550/arXiv.2207.08225},
+	abstract = {This paper introduces a system that learns to sing new tunes by listening to examples. It extracts sequencing rules from input music and uses these rules to generate new tunes, which are sung by a vocal synthesiser. We developed a method to represent rules for musical composition as quantum circuits. We claim that such musical rules are quantum native: they are naturally encodable in the amplitudes of quantum states. To evaluate a rule to generate a subsequent event, the system builds the respective quantum circuit dynamically and measures it. After a brief discussion about the vocal synthesis methods that we have been experimenting with, the paper introduces our novel generative music method through a practical example. The paper shows some experiments and concludes with a discussion about harnessing the creative potential of the system.},
+	urldate = {2024-10-29},
+	publisher = {arXiv},
+	author = {Miranda, Eduardo Reck and Siegelwax, Brian N.},
+	month = aug,
+	year = {2022},
+	note = {arXiv:2207.08225},
+	keywords = {Quantum Physics, Computer Science - Artificial Intelligence},
+}
