Introduce colouring to scores and update figures

--- a/Notebooks/Figures.ipynb
+++ b/Notebooks/Figures.ipynb
@@ -110,7 +110,7 @@
     "toy.insert(0,bassoon)\n",
     "\n",
     "toy.show()\n",
-    "toy.write(fmt=\"musicxml.png\", fp=\"../Figures/toy.png\", dpi=300)"
+    "#toy.write(fmt=\"musicxml.png\", fp=\"../Figures/toy.png\", dpi=300)"
    ]
   },
   {
